# chat_agent

./: .gitignore  README.md  config.example.toml  main.py  pyproject.toml  项目学习文档.md
chat_agent/: __init__.py  config.py  context.py  logging_setup.py  loop.py  memes.py  messages.py  presence.py  reasoner.py  reply_format.py  scheduler.py  skills.py  url_safety.py
chat_agent/agent/: __init__.py  loop.py  provider.py
chat_agent/channels/: __init__.py  qq.py  telegram.py
chat_agent/mcp/: __init__.py  registry.py
chat_agent/memory/: __init__.py  consolidation.py  embeddings.py  files.py  indexer.py  interests.py  optimizer.py  reranker.py  retriever.py  store.py  vector_store.py
chat_agent/observe/: __init__.py  trace.py
chat_agent/proactive/: __init__.py  drift.py  feed.py  loop.py  models.py
chat_agent/tools/: __init__.py  builtin.py  registry.py
package/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  smithery.yaml  test.setup.js
package/src/: index.js  index.ts
skills/: README.md
skills/create-drift-skill/: SKILL.md
skills/create-proactive-source/: SKILL.md
skills/create-skill/: SKILL.md
skills/feed-manage/: SKILL.md
tests/: test_agent_loop.py  test_config.py  test_context.py  test_drift.py  test_mcp.py  test_memes.py  test_memory_pipeline.py  test_multimodal.py  test_observe.py  test_proactive.py  test_provider.py  test_qq.py  test_reasoner.py  test_reply_format.py  test_scheduler.py  test_skills.py  test_store.py  test_telegram.py  test_tools.py  test_vector_memory.py  test_web_mcp_servers.py
(+15 files in other folders)
