[project]
name = "telegram-personal-agent"
version = "0.1.0"
description = "Telegram-only personal agent MVP with SQLite memory and reminders."
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "openai>=1.0.0",
    "python-telegram-bot>=21.0",
]

[tool.setuptools.packages.find]
include = ["chat_agent*"]
exclude = ["workspace*", "logs*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
