[project]
name = "telegram-personal-agent"
version = "0.1.0"
description = "Personal agent MVP with Telegram and QQ official bot channels."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "chromadb>=0.5",
    "openai>=1.0.0",
    "PyNaCl>=1.5",
    "python-telegram-bot>=21.0",
]

[tool.setuptools.packages.find]
include = ["chat_agent*"]
exclude = ["workspace*", "logs*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
